--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: go mod download 
       - name: Test with Go
-        run: go test -cover -json > TestResults-${{ matrix.go-version }}.json
+        run: go test -cover -json ./...> TestResults-${{ matrix.go-version }}.json
       - name: Upload Go test results
         uses: actions/upload-artifact@v4
         with:
